--- a/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
+++ b/org.eclipse.egit.gitflow.ui/src/org/eclipse/egit/gitflow/ui/internal/uitext.properties
@@ -69,6 +69,7 @@ NameValidator_nameAlreadyExists=Name '%s' already exists
 FeatureCheckoutHandler_cleanupDialog_title=Cannot Rebase Repository ''{0}''
 FeatureCheckoutHandler_cleanupDialog_text=You have uncommitted changes. Either commit the changes, stash the changes, or discard the changes by resetting the current branch.
 FinishFeatureDialog_keepBranch=&Keep branch - do not delete branch after finishing the feature
+FinishFeatureDialog_saveAsDefault=Save as &default
 FinishFeatureDialog_squashCheck=&Squash - produce a single commit from the changes in this feature
 FinishFeatureDialog_title=Feature finish options
 FinishFeatureDialog_setParameterForFinishing=Set options for finishing {0}.
