--- a/org.eclipse.egit.ui.importer/pom.xml
+++ b/org.eclipse.egit.ui.importer/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.eclipse.egit</groupId>
-		<version>4.0.3-SNAPSHOT</version>
+		<version>4.0.3.201509231615-r</version>
 		<artifactId>egit-parent</artifactId>
 	</parent>
 	<artifactId>org.eclipse.egit.ui.importer</artifactId>
