--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -25,6 +25,7 @@ AbortRebaseCommand_JobName=Aborting Rebase
 AbstractHistoryCommandHandler_ActionRequiresOneSelectedCommitMessage=Action requires one commit to be selected
 AbstractHistoryCommanndHandler_CouldNotGetRepositoryMessage=Could not get the repository from the history view
 AbstractHistoryCommanndHandler_NoInputMessage=Could not get the current input from the history view
+AbstractHistoryCommitHandler_cantGetBranches=Could not obtain branches
 AbstractRebaseCommand_DialogTitle=Action Canceled
 AbstractRebaseCommandHandler_cleanupDialog_text=You have uncommitted changes. Either commit the changes, stash the changes, or discard the changes by resetting the current branch.
 AbstractRebaseCommandHandler_cleanupDialog_title=Cannot Rebase Repository ''{0}''
