--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1830,6 +1830,9 @@ StagingView_AddJob=Adding files to index...
 StagingView_RemoveJob=Removing files from index...
 StagingView_ResetJob=Unstaging files...
 StagingView_MessageErrors=Fix warnings/errors before you commit changes or explicitly ignore them
+StagingView_openingProjectFailed=Opening project failed
+StagingView_ProjectIsClosed=Project is Closed
+StagingView_OpenProject=Would you like to open project {0}?
 
 StagingViewContentProvider_SubmoduleError=Unhandled exception while analyzing submodules
 StagingView_IgnoreErrors=Ignore warnings and errors
