--- a/org.eclipse.egit.ui/plugin.xml
+++ b/org.eclipse.egit.ui/plugin.xml
@@ -172,6 +172,13 @@
    <extension
          point="org.eclipse.core.runtime.adapters">
          <factory
+               adaptableType="org.eclipse.ui.IURIEditorInput"
+               class="org.eclipse.egit.ui.internal.factories.GitAdapterFactory">
+            <adapter type="java.io.File" />
+            <adapter type="org.eclipse.jgit.lib.Repository" />
+            <adapter type="org.eclipse.team.ui.history.IHistoryPageSource" />
+         </factory>
+         <factory
                adaptableType="org.eclipse.egit.core.internal.storage.GitFileHistoryProvider"
                class="org.eclipse.egit.ui.internal.factories.GitAdapterFactory">
             <adapter
@@ -295,6 +302,13 @@
             adaptableType="org.eclipse.team.ui.history.IHistoryView"
             class="org.eclipse.egit.ui.internal.factories.GitAdapterFactory">
          <adapter type="org.eclipse.ui.part.IShowInSource"/>
+      </factory>
+      <factory
+            adaptableType="org.eclipse.egit.ui.internal.staging.StagingEntry"
+            class="org.eclipse.egit.ui.internal.staging.StagingEntryAdapterFactory">
+         <adapter type="org.eclipse.core.resources.IResource"/>
+         <adapter type="org.eclipse.core.runtime.IPath"/>
+         <adapter type="org.eclipse.jgit.lib.Repository"/>
       </factory>
    </extension>
 
@@ -1129,16 +1143,9 @@
                class="org.eclipse.egit.ui.internal.actions.SimpleFetchActionHandler">
          </class>
          <activeWhen>
-            <and>
-               <count
-                     value="1">
-               </count>
-               <iterate>
-                  <adapt
-                        type="org.eclipse.core.resources.IResource">
-                  </adapt>
-               </iterate>
-            </and>
+            <test
+                  property="GitSelection.resourcesSingleRepository">
+            </test>
          </activeWhen>
       </handler>
       <handler
@@ -1175,16 +1182,9 @@
                class="org.eclipse.egit.ui.internal.actions.SimplePushActionHandler">
          </class>
          <activeWhen>
-            <and>
-               <count
-                     value="1">
-               </count>
-               <iterate>
-                  <adapt
-                        type="org.eclipse.core.resources.IResource">
-                  </adapt>
-               </iterate>
-            </and>
+            <test
+                  property="GitSelection.resourcesSingleRepository">
+            </test>
          </activeWhen>
       </handler>
       <handler
@@ -1193,16 +1193,16 @@
                class="org.eclipse.egit.ui.internal.actions.PullFromUpstreamActionHandler">
          </class>
          <activeWhen>
-            <iterate>
-               <or>
-                  <adapt
-                        type="org.eclipse.core.resources.IProject">
-                  </adapt>
+            <or>
+               <test
+                     property="GitSelection.resourcesAllInRepository">
+               </test>
+               <iterate>
                   <instanceof
                         value="org.eclipse.egit.ui.internal.repository.tree.RepositoryTreeNode">
                   </instanceof>
-               </or>
-            </iterate>
+               </iterate>
+            </or>
          </activeWhen>
       </handler>
       <handler
@@ -1232,7 +1232,7 @@
          </class>
          <activeWhen>
             <test
-                  property="GitSelection.projectSingleRepository">
+                  property="GitSelection.projectsSingleRepository">
             </test>
          </activeWhen>
       </handler>
@@ -1278,7 +1278,7 @@
          </class>
          <activeWhen>
             <test
-                  property="GitSelection.projectSingleRepository">
+                  property="GitSelection.projectsSingleRepository">
             </test>
          </activeWhen>
       </handler>
@@ -1313,7 +1313,7 @@
          <activeWhen>
             <or>
                <test
-                     property="GitSelection.projectSingleRepository">
+                     property="GitSelection.projectsSingleRepository">
                </test>
                <and>
                   <count
@@ -1549,16 +1549,9 @@
                class="org.eclipse.egit.ui.internal.actions.MergeActionHandler">
          </class>
          <activeWhen>
-            <and>
-               <count
-                     value="1">
-               </count>
-               <iterate>
-                  <adapt
-                        type="org.eclipse.core.resources.IProject">
-                  </adapt>
-               </iterate>
-            </and>
+            <test
+                  property="GitSelection.projectsSingleRepository">
+            </test>
          </activeWhen>
       </handler>
       <handler
@@ -1588,7 +1581,7 @@
          </class>
          <activeWhen>
             <test
-                  property="GitSelection.projectSingleRepository">
+                  property="GitSelection.projectsSingleRepository">
             </test>
          </activeWhen>
       </handler>
@@ -1668,16 +1661,9 @@
                class="org.eclipse.egit.ui.internal.actions.ResetActionHandler">
          </class>
          <activeWhen>
-            <and>
-               <count
-                     value="1">
-               </count>
-               <iterate>
-                  <adapt
-                        type="org.eclipse.core.resources.IProject">
-                  </adapt>
-               </iterate>
-            </and>
+            <test
+                  property="GitSelection.projectsSingleRepository">
+            </test>
          </activeWhen>
       </handler>
       <handler
@@ -3849,7 +3835,7 @@
                <visibleWhen
                      checkEnabled="false">
                   <test
-                        property="GitSelection.projectSingleRepository">
+                        property="GitSelection.projectsSingleRepository">
                   </test>
                </visibleWhen>
             </menu>
@@ -3860,7 +3846,7 @@
                <visibleWhen
                      checkEnabled="false">
                   <test
-                        property="GitSelection.projectSingleRepository">
+                        property="GitSelection.projectsSingleRepository">
                   </test>
                </visibleWhen>
             </command>
@@ -3872,7 +3858,7 @@
                <visibleWhen
                      checkEnabled="false">
                   <test
-                        property="GitSelection.projectSingleRepository">
+                        property="GitSelection.projectsSingleRepository">
                   </test>
                </visibleWhen>
             </command>
@@ -3882,7 +3868,7 @@
                <visibleWhen
                      checkEnabled="false">
                   <test
-                        property="GitSelection.projectSingleRepository">
+                        property="GitSelection.projectsSingleRepository">
                   </test>
                </visibleWhen>
             </dynamic>
@@ -3925,7 +3911,7 @@
                   <visibleWhen
                         checkEnabled="false">
                      <test
-                           property="GitSelection.projectSingleRepository"
+                           property="GitSelection.projectsSingleRepository"
                            args="hasGerritConfiguration">
                      </test>
                   </visibleWhen>
@@ -3937,7 +3923,7 @@
                   <visibleWhen
                         checkEnabled="false">
                      <test
-                           property="GitSelection.projectSingleRepository"
+                           property="GitSelection.projectsSingleRepository"
                            args="hasGerritConfiguration">
                      </test>
                   </visibleWhen>
@@ -3959,7 +3945,7 @@
                <visibleWhen
                      checkEnabled="false">
                   <test
-                        property="GitSelection.projectSingleRepository">
+                        property="GitSelection.projectsSingleRepository">
                   </test>
                </visibleWhen>
             </menu>
@@ -3976,7 +3962,7 @@
                <visibleWhen
                      checkEnabled="false">
                   <test
-                        property="GitSelection.projectSingleRepository">
+                        property="GitSelection.projectsSingleRepository">
                   </test>
                </visibleWhen>
             </menu>
@@ -4058,7 +4044,7 @@
                   <visibleWhen
                         checkEnabled="false">
                      <test
-                           property="GitSelection.projectSingleRepository">
+                           property="GitSelection.projectsSingleRepository">
                      </test>
                   </visibleWhen>
                </command>
@@ -4069,7 +4055,7 @@
                   <visibleWhen
                         checkEnabled="false">
                      <test
-                           property="GitSelection.projectSingleRepository">
+                           property="GitSelection.projectsSingleRepository">
                      </test>
                   </visibleWhen>
                </command>
@@ -4110,7 +4096,7 @@
                   <visibleWhen
                         checkEnabled="false">
                      <test
-                           property="GitSelection.projectSingleRepository">
+                           property="GitSelection.projectsSingleRepository">
                      </test>
                   </visibleWhen>
                </command>
@@ -4125,7 +4111,7 @@
                   <visibleWhen
                         checkEnabled="false">
                      <test
-                           property="GitSelection.projectSingleRepository">
+                           property="GitSelection.projectsSingleRepository">
                      </test>
                   </visibleWhen>
                </command>
@@ -4187,7 +4173,7 @@
                <visibleWhen
                      checkEnabled="false">
                   <test
-                        property="GitSelection.projectSingleRepository">
+                        property="GitSelection.projectsSingleRepository">
                   </test>
                </visibleWhen>
             </command>
@@ -4200,7 +4186,7 @@
                   label="%RebaseWithDialog_label">
                <visibleWhen checkEnabled="false">
                   <test
-                        property="GitSelection.projectSingleRepository"
+                        property="GitSelection.projectsSingleRepository"
                         args="isSafe">
                   </test>
                </visibleWhen>
@@ -4214,7 +4200,7 @@
                   <visibleWhen
                         checkEnabled="false">
                      <test
-                           property="GitSelection.projectSingleRepository"
+                           property="GitSelection.projectsSingleRepository"
                            args="canAbortRebase">
                      </test>
                   </visibleWhen>
@@ -4225,7 +4211,7 @@
                   <visibleWhen
                         checkEnabled="false">
                      <test
-                           property="GitSelection.projectSingleRepository"
+                           property="GitSelection.projectsSingleRepository"
                            args="canAbortRebase">
                      </test>
                   </visibleWhen>
@@ -4236,7 +4222,7 @@
                   <visibleWhen
                         checkEnabled="false">
                      <test
-                           property="GitSelection.projectSingleRepository"
+                           property="GitSelection.projectsSingleRepository"
                            args="canContinueRebase">
                      </test>
                   </visibleWhen>
@@ -4249,7 +4235,7 @@
                <visibleWhen
                      checkEnabled="false">
                   <test
-                        property="GitSelection.projectSingleRepository">
+                        property="GitSelection.projectsSingleRepository">
                   </test>
                </visibleWhen>
             </command>
@@ -5239,7 +5225,7 @@
             class="org.eclipse.egit.ui.internal.selection.SelectionPropertyTester"
             id="org.eclipse.egit.ui.SelectionTester"
             namespace="GitSelection"
-            properties="projectSingleRepository,projectsWithRepositories,resourcesSingleRepository,fileOrFolderInRepository,resourcesAllInRepository"
+            properties="projectsSingleRepository,projectsWithRepositories,resourcesSingleRepository,fileOrFolderInRepository,resourcesAllInRepository"
             type="java.util.Collection">
       </propertyTester>
    </extension>
@@ -5830,16 +5816,6 @@
             id="org.eclipse.egit.ui.internal.commit.CommitEditorInputFactory">
       </factory>
    </extension>
-   <extension
-		point="org.eclipse.core.runtime.adapters">
-	      <factory
-	            adaptableType="org.eclipse.egit.ui.internal.staging.StagingEntry"
-				            class="org.eclipse.egit.ui.internal.staging.StagingEntryAdapterFactory">
-	         <adapter
-	               type="org.eclipse.core.resources.IResource">
-	         </adapter>
-	      </factory>
-	</extension>
     <extension point="org.eclipse.search.searchPages">
       <page
             class="org.eclipse.egit.ui.internal.search.CommitSearchPage"
