--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1504,13 +1504,13 @@ MultiPullResultDialog_WindowTitle=Pull Result for Multiple Repositories
 
 CommitFileDiffViewer_CanNotOpenCompareEditorTitle=Cannot Open Compare Editor
 CommitFileDiffViewer_CompareMenuLabel=Compare with Previous &Version
-CommitFileDiffViewer_CompareWorkingDirectoryMenuLabel=Compare with &Workspace
+CommitFileDiffViewer_CompareWorkingDirectoryMenuLabel=Compare with &Working Tree
 CommitFileDiffViewer_FileDoesNotExist=File {0} does not exist in the workspace
 CommitFileDiffViewer_MergeCommitMultiAncestorMessage=This is a merge commit with more than one ancestor
 CommitFileDiffViewer_notContainedInCommit=File {0} is not contained in commit {1}
 CommitFileDiffViewer_OpenInEditorMenuLabel=Open &This Version
 CommitFileDiffViewer_OpenPreviousInEditorMenuLabel=Open &Previous Version
-CommitFileDiffViewer_OpenWorkingTreeVersionInEditorMenuLabel=&Open Workspace Version
+CommitFileDiffViewer_OpenWorkingTreeVersionInEditorMenuLabel=&Open Working Tree Version
 StagingView_CompareWithIndexMenuLabel=Compare with Index
 CommitFileDiffViewer_ShowAnnotationsMenuLabel=&Show Annotations
 CommitFileDiffViewer_ShowInHistoryLabel=Focus On This File
