--- a/org.eclipse.egit.core.test/pom.xml
+++ b/org.eclipse.egit.core.test/pom.xml
@@ -16,7 +16,7 @@
   <parent>
     <groupId>org.eclipse.egit</groupId>
     <artifactId>egit-parent</artifactId>
-    <version>4.1.1-SNAPSHOT</version>
+    <version>4.1.1.201511131810-r</version>
   </parent>
 
   <artifactId>org.eclipse.egit.core.test</artifactId>
