--- a/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
+++ b/org.eclipse.egit.ui/src/org/eclipse/egit/ui/internal/uitext.properties
@@ -1510,7 +1510,7 @@ CommitFileDiffViewer_MergeCommitMultiAncestorMessage=This is a merge commit with
 CommitFileDiffViewer_notContainedInCommit=File {0} is not contained in commit {1}
 CommitFileDiffViewer_OpenInEditorMenuLabel=Open &This Version
 CommitFileDiffViewer_OpenPreviousInEditorMenuLabel=Open &Previous Version
-CommitFileDiffViewer_OpenWorkingTreeVersionInEditorMenuLabel=&Open Workspace Version
+CommitFileDiffViewer_OpenWorkingTreeVersionInEditorMenuLabel=&Open Working Tree Version
 StagingView_CompareWithIndexMenuLabel=Compare with Index
 CommitFileDiffViewer_ShowAnnotationsMenuLabel=&Show Annotations
 CommitFileDiffViewer_ShowInHistoryLabel=Focus On This File
